# python_promise_keeper

./: .gitignore  Pipfile  README.md  README.rst  REAME.md  dev-requirements.txt  promise_keeper.py  pyproject.toml  requirements.txt  setup.py  tests.py
docs/: 01_introduction.markdown  02_reference_PromiseKeeper.markdown  03_reference_Promise.markdown  PromiseKeeper.markdown
tests/: test_promise_keeper.py
